--- a/WCHProjects/Moduls/Login/controllers/LoginViewController.xib
+++ b/WCHProjects/Moduls/Login/controllers/LoginViewController.xib
@@ -29,7 +29,7 @@
                         <constraint firstAttribute="height" constant="50" id="iz7-0L-KSc"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits" keyboardType="numberPad" secureTextEntry="YES"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                     <connections>
                         <outlet property="delegate" destination="-1" id="Egv-2O-VvY"/>
                     </connections>
