--- a/WCHProjects/Moduls/Order/view/OBuyCarTableViewCell.xib
+++ b/WCHProjects/Moduls/Order/view/OBuyCarTableViewCell.xib
@@ -1,19 +1,90 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="OBuyCarTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="89.5"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Bqi-WG-Na9">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="79.5"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dMJ-2a-Pod">
+                                <rect key="frame" x="0.0" y="0.0" width="80" height="79.5"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PWP-p3-SIf">
+                                <rect key="frame" x="297" y="33.5" width="13" height="17"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="14"/>
+                                <color key="textColor" red="1" green="0.029831843470767838" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X8c-Uv-aWP">
+                                <rect key="frame" x="90" y="10" width="14.5" height="19.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3My-bt-Vjn">
+                                <rect key="frame" x="90" y="35" width="11.5" height="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="0.4979824424" green="0.49807190899999998" blue="0.4979767799" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tcq-qR-gwB">
+                                <rect key="frame" x="90" y="55" width="11.5" height="14.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="0.4979824424" green="0.49807190899999998" blue="0.4979767799" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dMJ-2a-Pod" firstAttribute="leading" secondItem="Bqi-WG-Na9" secondAttribute="leading" id="0Gq-M6-Z8R"/>
+                            <constraint firstItem="Tcq-qR-gwB" firstAttribute="top" secondItem="3My-bt-Vjn" secondAttribute="bottom" constant="5" id="3Q1-wj-e0A"/>
+                            <constraint firstItem="dMJ-2a-Pod" firstAttribute="width" secondItem="Bqi-WG-Na9" secondAttribute="width" multiplier="1/4" id="8rE-Vj-cqS"/>
+                            <constraint firstAttribute="trailing" secondItem="PWP-p3-SIf" secondAttribute="trailing" constant="10" id="BQw-76-1Jz"/>
+                            <constraint firstItem="PWP-p3-SIf" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="3My-bt-Vjn" secondAttribute="trailing" constant="5" id="Hz3-u5-AiM"/>
+                            <constraint firstAttribute="bottom" secondItem="dMJ-2a-Pod" secondAttribute="bottom" id="UsI-Tk-Ubw"/>
+                            <constraint firstItem="X8c-Uv-aWP" firstAttribute="leading" secondItem="dMJ-2a-Pod" secondAttribute="trailing" constant="10" id="WJE-Dz-Vbn"/>
+                            <constraint firstItem="dMJ-2a-Pod" firstAttribute="top" secondItem="Bqi-WG-Na9" secondAttribute="top" id="dO2-S0-Uhb"/>
+                            <constraint firstItem="X8c-Uv-aWP" firstAttribute="top" secondItem="Bqi-WG-Na9" secondAttribute="top" constant="10" id="eVx-mw-hjY"/>
+                            <constraint firstItem="3My-bt-Vjn" firstAttribute="leading" secondItem="dMJ-2a-Pod" secondAttribute="trailing" constant="10" id="gYj-5J-nzN"/>
+                            <constraint firstItem="3My-bt-Vjn" firstAttribute="top" secondItem="X8c-Uv-aWP" secondAttribute="bottom" constant="5" id="iIG-yi-0e2"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="X8c-Uv-aWP" secondAttribute="trailing" constant="10" id="lzn-TR-mco"/>
+                            <constraint firstItem="PWP-p3-SIf" firstAttribute="centerY" secondItem="3My-bt-Vjn" secondAttribute="centerY" id="o0T-Jw-efq"/>
+                            <constraint firstItem="Tcq-qR-gwB" firstAttribute="leading" secondItem="dMJ-2a-Pod" secondAttribute="trailing" constant="10" id="p1V-mq-t5l"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Tcq-qR-gwB" secondAttribute="trailing" constant="10" id="r59-e2-JHQ"/>
+                            <constraint firstAttribute="trailing" secondItem="PWP-p3-SIf" secondAttribute="trailing" constant="10" id="yup-fR-A6d"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="Bqi-WG-Na9" secondAttribute="bottom" constant="10" id="DJl-cT-WFs"/>
+                    <constraint firstItem="Bqi-WG-Na9" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Ucy-LU-mhB"/>
+                    <constraint firstItem="Bqi-WG-Na9" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="f61-pz-LUh"/>
+                    <constraint firstAttribute="trailing" secondItem="Bqi-WG-Na9" secondAttribute="trailing" id="ilJ-Mc-Sqy"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="nameLab" destination="X8c-Uv-aWP" id="dkS-Q6-64P"/>
+                <outlet property="numLab" destination="Tcq-qR-gwB" id="TLe-UI-bnw"/>
+                <outlet property="priceLab" destination="3My-bt-Vjn" id="znZ-Dx-IbG"/>
+                <outlet property="typeImgV" destination="dMJ-2a-Pod" id="baq-eZ-3JC"/>
+                <outlet property="typeLab" destination="PWP-p3-SIf" id="3rp-Xl-h7u"/>
+            </connections>
         </tableViewCell>
     </objects>
 </document>
