--- a/WCHProjects/Moduls/Order/view/ORentCarTableViewCell.xib
+++ b/WCHProjects/Moduls/Order/view/ORentCarTableViewCell.xib
@@ -21,14 +21,19 @@
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kt7-8s-6Vz">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="134.5"/>
                         <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fan-Et-8SM">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="135"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <gestureRecognizers/>
+                            </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZDH-4T-6TI">
                                 <rect key="frame" x="15" y="10" width="13" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1997-01-01" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lii-9n-fJb">
-                                <rect key="frame" x="73" y="32" width="65.5" height="14.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lii-9n-fJb">
+                                <rect key="frame" x="73" y="32" width="11.5" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.0" green="0.58637672662734985" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -68,24 +73,30 @@
                                 <color key="textColor" red="0.4979824424" green="0.49807190899999998" blue="0.4979767799" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2000-01-01" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nd2-gW-nCa">
-                                <rect key="frame" x="73" y="51" width="68" height="14.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="--" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Nd2-gW-nCa">
+                                <rect key="frame" x="73" y="51" width="11.5" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" red="0.82914930582046509" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="Rh4-AG-s0X" firstAttribute="centerY" secondItem="ZDH-4T-6TI" secondAttribute="centerY" id="0Vz-T5-OqH"/>
                             <constraint firstAttribute="bottom" secondItem="Q2f-u9-MhR" secondAttribute="bottom" constant="10" id="2OB-5P-Bye"/>
                             <constraint firstItem="Q2f-u9-MhR" firstAttribute="leading" secondItem="kt7-8s-6Vz" secondAttribute="leading" constant="15" id="5X1-pB-ZXj"/>
                             <constraint firstItem="7Az-Fp-4lz" firstAttribute="leading" secondItem="kt7-8s-6Vz" secondAttribute="leading" constant="15" id="9tt-8J-grJ"/>
+                            <constraint firstAttribute="trailing" secondItem="Fan-Et-8SM" secondAttribute="trailing" id="Eyc-iE-BBQ"/>
                             <constraint firstItem="Nd2-gW-nCa" firstAttribute="centerY" secondItem="dAe-E2-Fxg" secondAttribute="centerY" id="Gom-sN-mRj"/>
                             <constraint firstAttribute="trailing" secondItem="Q2f-u9-MhR" secondAttribute="trailing" constant="15" id="Iz5-qb-KBD"/>
+                            <constraint firstItem="Fan-Et-8SM" firstAttribute="top" secondItem="kt7-8s-6Vz" secondAttribute="top" id="KcK-vZ-Afb"/>
                             <constraint firstItem="Nd2-gW-nCa" firstAttribute="leading" secondItem="dAe-E2-Fxg" secondAttribute="trailing" constant="5" id="MKJ-Uu-KvK"/>
+                            <constraint firstItem="Fan-Et-8SM" firstAttribute="top" secondItem="kt7-8s-6Vz" secondAttribute="top" id="MZL-e5-vtd"/>
+                            <constraint firstAttribute="bottom" secondItem="Fan-Et-8SM" secondAttribute="bottom" id="Oln-LB-n6g"/>
                             <constraint firstItem="dAe-E2-Fxg" firstAttribute="leading" secondItem="kt7-8s-6Vz" secondAttribute="leading" constant="15" id="P39-2F-h6e"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="lii-9n-fJb" secondAttribute="trailing" constant="15" id="Rfb-9J-TGU"/>
+                            <constraint firstItem="Fan-Et-8SM" firstAttribute="leading" secondItem="kt7-8s-6Vz" secondAttribute="leading" id="W0T-v4-dJf"/>
                             <constraint firstItem="hXe-ss-yFW" firstAttribute="top" secondItem="ZDH-4T-6TI" secondAttribute="bottom" constant="5" id="WRB-F7-GNB"/>
                             <constraint firstItem="ZDH-4T-6TI" firstAttribute="leading" secondItem="kt7-8s-6Vz" secondAttribute="leading" constant="15" id="WzM-dV-dpW"/>
                             <constraint firstItem="dAe-E2-Fxg" firstAttribute="top" secondItem="hXe-ss-yFW" secondAttribute="bottom" constant="5" id="X6g-n3-mF0"/>
@@ -97,6 +108,7 @@
                             <constraint firstAttribute="trailing" secondItem="Rh4-AG-s0X" secondAttribute="trailing" constant="15" id="kGa-0N-uOJ"/>
                             <constraint firstItem="ZDH-4T-6TI" firstAttribute="top" secondItem="kt7-8s-6Vz" secondAttribute="top" constant="10" id="kKx-tb-42R"/>
                             <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="Nd2-gW-nCa" secondAttribute="trailing" constant="15" id="s3g-nh-m8q"/>
+                            <constraint firstAttribute="bottom" secondItem="Fan-Et-8SM" secondAttribute="bottom" id="xIp-wa-BZ1"/>
                             <constraint firstAttribute="trailing" secondItem="7Az-Fp-4lz" secondAttribute="trailing" constant="15" id="zQZ-br-W19"/>
                         </constraints>
                     </view>
@@ -112,10 +124,14 @@
                 <outlet property="addressLab" destination="7Az-Fp-4lz" id="pl0-gy-H0a"/>
                 <outlet property="endLab" destination="Nd2-gW-nCa" id="vL5-9Y-X7I"/>
                 <outlet property="nameLab" destination="ZDH-4T-6TI" id="BCM-H7-2oY"/>
+                <outlet property="pressView" destination="Fan-Et-8SM" id="QUi-OT-Q3e"/>
                 <outlet property="startLab" destination="lii-9n-fJb" id="ZyP-yQ-kPO"/>
                 <outlet property="typeBtn" destination="Q2f-u9-MhR" id="pbZ-Xs-q2j"/>
+                <outlet property="typeBtnBottom" destination="2OB-5P-Bye" id="Pin-uC-KMb"/>
+                <outlet property="typeBtnHeight" destination="4Jz-zd-IXy" id="vbb-Yo-wmY"/>
                 <outlet property="typeLab" destination="Rh4-AG-s0X" id="tgi-vH-VG6"/>
             </connections>
+            <point key="canvasLocation" x="32" y="70.5"/>
         </tableViewCell>
     </objects>
 </document>
