--- a/WCHProjects/Moduls/Main/controller/SearchAddressViewController.xib
+++ b/WCHProjects/Moduls/Main/controller/SearchAddressViewController.xib
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11542" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SearchAddressViewController">
             <connections>
-                <outlet property="cityTxtField" destination="NZq-DR-aOx" id="wLT-ah-0jy"/>
-                <outlet property="searchBar" destination="D92-hB-ej0" id="sfp-F3-afD"/>
+                <outlet property="cityTxtField" destination="SaS-xo-wL7" id="dtn-KV-lna"/>
+                <outlet property="mobileTxtField" destination="dhf-nQ-QQs" id="oha-oy-ssv"/>
+                <outlet property="nameTxtField" destination="Yli-jt-NID" id="8m3-BK-IfS"/>
                 <outlet property="tableView" destination="Kah-T9-IcI" id="78S-r5-h65"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -22,31 +23,93 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField opaque="NO" clipsSubviews="YES" tag="100" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NZq-DR-aOx">
-                    <rect key="frame" x="10" y="10" width="355" height="35"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="35" id="oKU-eB-h8c"/>
-                    </constraints>
-                    <nil key="textColor"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
-                    <connections>
-                        <outlet property="delegate" destination="-1" id="00c-39-hAE"/>
-                    </connections>
-                </textField>
-                <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="D92-hB-ej0">
-                    <rect key="frame" x="0.0" y="50" width="375" height="44"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="44" id="AK2-h4-xxx"/>
-                    </constraints>
-                    <textInputTraits key="textInputTraits"/>
-                    <connections>
-                        <outlet property="delegate" destination="-1" id="WDs-fw-83s"/>
-                    </connections>
-                </searchBar>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Kah-T9-IcI" customClass="BaseTableView">
-                    <rect key="frame" x="0.0" y="99" width="375" height="568"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                     <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    <view key="tableHeaderView" contentMode="scaleToFill" id="pFA-qX-uTw">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="122"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" tag="100" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入联系人姓名" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Yli-jt-NID">
+                                <rect key="frame" x="20" y="0.0" width="335" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="sUN-xt-3Hp"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="-1" id="4gu-N5-aDD"/>
+                                </connections>
+                            </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BEB-Le-00e">
+                                <rect key="frame" x="20" y="40" width="335" height="0.5"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="RTS-vk-kh3"/>
+                                </constraints>
+                            </view>
+                            <textField opaque="NO" clipsSubviews="YES" tag="101" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入联系电话" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="dhf-nQ-QQs">
+                                <rect key="frame" x="20" y="40.5" width="335" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="NkA-Gl-nB7"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="-1" id="yli-26-paT"/>
+                                </connections>
+                            </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2sv-e6-1U0">
+                                <rect key="frame" x="20" y="80.5" width="335" height="0.5"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="zbH-Tk-V2Q"/>
+                                </constraints>
+                            </view>
+                            <textField opaque="NO" clipsSubviews="YES" tag="102" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入地址关键词" textAlignment="center" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="SaS-xo-wL7">
+                                <rect key="frame" x="20" y="81" width="335" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="9uN-fb-Fuj"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="-1" id="Z78-Gj-Qde"/>
+                                </connections>
+                            </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IVE-7V-FEN">
+                                <rect key="frame" x="0.0" y="121" width="375" height="0.5"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="0.5" id="cLZ-Z3-ERE"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="Yli-jt-NID" secondAttribute="trailing" constant="20" id="1CC-kS-s35"/>
+                            <constraint firstItem="dhf-nQ-QQs" firstAttribute="leading" secondItem="pFA-qX-uTw" secondAttribute="leading" constant="20" id="1xl-Bx-qxc"/>
+                            <constraint firstAttribute="trailing" secondItem="dhf-nQ-QQs" secondAttribute="trailing" constant="20" id="5e3-Dd-CCQ"/>
+                            <constraint firstItem="2sv-e6-1U0" firstAttribute="top" secondItem="dhf-nQ-QQs" secondAttribute="bottom" id="Fe8-vV-17v"/>
+                            <constraint firstAttribute="trailing" secondItem="BEB-Le-00e" secondAttribute="trailing" constant="20" id="Hfm-rp-W1q"/>
+                            <constraint firstItem="dhf-nQ-QQs" firstAttribute="top" secondItem="BEB-Le-00e" secondAttribute="bottom" id="IKW-Zg-3CF"/>
+                            <constraint firstItem="SaS-xo-wL7" firstAttribute="leading" secondItem="pFA-qX-uTw" secondAttribute="leading" constant="20" id="LbN-R1-Shs"/>
+                            <constraint firstItem="BEB-Le-00e" firstAttribute="top" secondItem="Yli-jt-NID" secondAttribute="bottom" id="Vyd-Il-P6z"/>
+                            <constraint firstItem="IVE-7V-FEN" firstAttribute="top" secondItem="SaS-xo-wL7" secondAttribute="bottom" id="Wfd-xD-DLx"/>
+                            <constraint firstItem="Yli-jt-NID" firstAttribute="leading" secondItem="pFA-qX-uTw" secondAttribute="leading" constant="20" id="X7J-1O-kmR"/>
+                            <constraint firstItem="IVE-7V-FEN" firstAttribute="leading" secondItem="pFA-qX-uTw" secondAttribute="leading" id="bNp-Ug-TC7"/>
+                            <constraint firstItem="BEB-Le-00e" firstAttribute="leading" secondItem="pFA-qX-uTw" secondAttribute="leading" constant="20" id="gPs-28-Nxp"/>
+                            <constraint firstItem="SaS-xo-wL7" firstAttribute="top" secondItem="2sv-e6-1U0" secondAttribute="bottom" id="hiM-QG-tBb"/>
+                            <constraint firstAttribute="trailing" secondItem="SaS-xo-wL7" secondAttribute="trailing" constant="20" id="qWD-m2-k9X"/>
+                            <constraint firstItem="Yli-jt-NID" firstAttribute="top" secondItem="pFA-qX-uTw" secondAttribute="top" id="tLj-gO-51r"/>
+                            <constraint firstItem="2sv-e6-1U0" firstAttribute="leading" secondItem="pFA-qX-uTw" secondAttribute="leading" constant="20" id="tQO-jI-50m"/>
+                            <constraint firstAttribute="trailing" secondItem="2sv-e6-1U0" secondAttribute="trailing" constant="20" id="xuO-H8-R58"/>
+                            <constraint firstAttribute="trailing" secondItem="IVE-7V-FEN" secondAttribute="trailing" id="ymt-4L-nBv"/>
+                        </constraints>
+                    </view>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="KA3-D9-Dav"/>
                         <outlet property="delegate" destination="-1" id="Q3v-Xa-v3G"/>
@@ -56,15 +119,9 @@
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="Kah-T9-IcI" secondAttribute="trailing" id="2J2-Es-33X"/>
-                <constraint firstAttribute="bottom" secondItem="Kah-T9-IcI" secondAttribute="bottom" id="JJ1-WS-pTV"/>
                 <constraint firstItem="Kah-T9-IcI" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="RFr-GY-DN5"/>
-                <constraint firstItem="D92-hB-ej0" firstAttribute="top" secondItem="NZq-DR-aOx" secondAttribute="bottom" constant="5" id="Wqg-DF-PwT"/>
-                <constraint firstAttribute="trailing" secondItem="NZq-DR-aOx" secondAttribute="trailing" constant="10" id="buM-jL-7DL"/>
-                <constraint firstItem="Kah-T9-IcI" firstAttribute="top" secondItem="D92-hB-ej0" secondAttribute="bottom" constant="5" id="eMc-i6-ss3"/>
-                <constraint firstItem="NZq-DR-aOx" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="10" id="f1A-JH-0aQ"/>
-                <constraint firstItem="NZq-DR-aOx" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="jXg-e0-6GR"/>
-                <constraint firstItem="D92-hB-ej0" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ndq-VM-fdj"/>
-                <constraint firstAttribute="trailing" secondItem="D92-hB-ej0" secondAttribute="trailing" id="ywV-LG-Nec"/>
+                <constraint firstItem="Kah-T9-IcI" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="ocf-vi-YHr"/>
+                <constraint firstAttribute="bottom" secondItem="Kah-T9-IcI" secondAttribute="bottom" id="pzr-Xc-WyH"/>
             </constraints>
             <point key="canvasLocation" x="205.5" y="190.5"/>
         </view>
