--- a/WCHProjects/Moduls/Mine/controllers/JiKeViewController.xib
+++ b/WCHProjects/Moduls/Mine/controllers/JiKeViewController.xib
@@ -32,6 +32,9 @@
                                 <rect key="frame" x="15" y="10" width="345" height="40"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <state key="normal" title="提交"/>
+                                <connections>
+                                    <action selector="submitBtnAction:" destination="-1" eventType="touchUpInside" id="XyR-vH-Jfp"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
